# zatgo-core

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
docs/: CHANGELOG.md  api.md  architecture.md  deployment.md  developer.md  doctypes.md  folder_structure.md  installation.md  permissions.md  plugin_guide.md  upgrade.md  user_manual.md
scripts/: fix_controllers.py  generate_doctypes.py  generate_reports.py
zatgo_core/: __init__.py  hooks.py  install.py  modules.txt  patches.txt
zatgo_core.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
zatgo_core/api/: __init__.py  response.py  validators.py
zatgo_core/cache/: __init__.py  invalidation.py  manager.py
zatgo_core/config/: __init__.py  desktop.py  docs.py
zatgo_core/constants/: __init__.py  client_apps.py  roles.py  settings.py
zatgo_core/events/: __init__.py  boot.py  company.py
zatgo_core/mixins/: __init__.py  auditable.py  cacheable_settings.py
zatgo_core/patches/: __init__.py
zatgo_core/permissions/: __init__.py  company_scope.py  guards.py  settings_visibility.py
zatgo_core/plugins/: __init__.py  discover.py
zatgo_core/repositories/: __init__.py  settings_repository.py
zatgo_core/services/: __init__.py  app_registry_service.py  config_loader_service.py  customer_sync_ops.py  customer_sync_service.py  erpnext_reads.py  erpnext_writes.py  feature_flag_service.py  go_van_service.py  health_service.py  item_sync_ops.py  item_sync_service.py  jobs.py  plugin_registry_service.py  settings_service.py  van_sale_access.py  zatca_qr.py
zatgo_core/setup/: __init__.py  debug_van_order.py  (+6 more)
(+212 files in other folders)
